# auto-apply

./: .gitignore  CLAUDE.md  answers.example.yaml  companies_seed.yaml  config.yaml  main.py  profile.example.yaml  pyproject.toml
auto_apply.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
db/: schema.sql
docs/superpowers/plans/: 2026-05-30-job-discovery.md  2026-05-31-workday-ats-client.md  2026-05-31-workday-autodetection.md  2026-05-31-workday-playwright.md  2026-07-18-workday-hardening-and-seed-discovery.md  2026-07-20-job-lifecycle-tracker.md
docs/superpowers/specs/: 2026-05-30-job-discovery-design.md  (+5 more)
models/: company.py  digest.py  job.py  profile.py
pipeline/: config.py  db.py  notifier.py  runner.py  scheduler.py
pipeline/apply/: answers.py  executor.py  planner.py  questions.py
pipeline/discovery/: detector.py  poller.py  seed.py
pipeline/filter/: __init__.py  keyword.py  llm_scorer.py
pipeline/materials/: aliases.py  aliases.yaml  coverage.py  jd_analyzer.py  letter.py  profile.py  renderer.py  rephrase.py  selector.py  verify.py
tests/: conftest.py  test_aliases.py  test_answers.py  test_cli.py  test_clients.py  test_config.py  test_coverage.py  test_db.py  test_detector.py  test_executor.py  test_filter.py  test_jd_analyzer.py  test_keyword.py  test_letter.py  test_llm_scorer.py  test_models.py  test_notifier.py  test_planner.py  test_poller.py  test_profile.py  test_questions.py  test_renderer.py  test_rephrase.py  test_runner.py  test_scheduler.py  test_seed.py  test_selector.py  test_verify.py  test_workday.py
(+11 files in other folders)
