[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "auto-apply"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.27",
    "anthropic>=0.40",
    "apscheduler>=3.10",
    "click>=8.1",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
]

[tool.setuptools]
packages = ["db", "models", "pipeline", "pipeline.discovery", "pipeline.discovery.clients", "pipeline.filter"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
