[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "auto-apply"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.27",
    "apscheduler>=3.10",
    "click>=8.1",
    "pyyaml>=6.0",
    "playwright>=1.40",
    "jinja2>=3.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
]

[tool.setuptools]
packages = ["db", "models", "pipeline", "pipeline.discovery", "pipeline.discovery.clients", "pipeline.filter", "pipeline.materials"]

[tool.setuptools.package-data]
"pipeline.materials" = ["*.yaml", "templates/*.j2"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
addopts = "-m 'not integration'"
markers = [
    "integration: requires a real browser and live network (run with: pytest -m integration)",
]
